tdf#106463 set new firebird connections as autocommit by default

as per SDBC specifications

Change-Id: I132a8e565468bcacf0fa5ee0dfb62bf0dd717e24